--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ポケモンタイムアタック</title>
+<title>ポケモン図鑑番号クイズ</title>
 
 <style>
 body {
@@ -207,3 +207,4 @@ function gameOver(reason) {
 </script>
 </body>
 </html>
+
