--- a/index.html
+++ b/index.html
@@ -12,62 +12,88 @@ body {
   padding: 10px;
   background: #f5f5f5;
 }
+
 .container {
   max-width: 500px;
   margin: auto;
   background: white;
   padding: 15px;
   border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
-h1 { text-align: center; font-size: 1.4em; }
+
+h1 {
+  text-align: center;
+  font-size: 1.4em;
+}
+
 select, input, button {
   width: 100%;
   font-size: 1.1em;
   padding: 10px;
   margin: 8px 0;
 }
-#status { text-align: center; font-size: 1.1em; }
-#timer { color: red; font-weight: bold; }
-.hidden { display: none; }
+
+#status {
+  text-align: center;
+  font-size: 1.1em;
+  margin: 10px 0;
+}
+
+#timer {
+  font-weight: bold;
+  color: red;
+}
+
+.hidden {
+  display: none;
+}
 </style>
 </head>
 
 <body>
 <div class="container">
-<h1>ポケモン図鑑番号検定</h1>
+  <h1>ポケモン図鑑番号検定</h1>
 
-<label>制限時間</label>
-<select id="timeSelect">
-  <option value="0">制限時間なし</option>
-  <option value="1">1秒</option>
-  <option value="2">2秒</option>
-  <option value="3">3秒</option>
-  <option value="4">4秒</option>
-  <option value="5" selected>5秒</option>
-  <option value="6">6秒</option>
-  <option value="7">7秒</option>
-  <option value="8">8秒</option>
-  <option value="9">9秒</option>
-  <option value="10">10秒</option>
-</select>
+  <label>制限時間を選択</label>
+  <select id="timeSelect">
+    <option value="0">制限時間なし</option>
+    <option value="1">1秒</option>
+    <option value="2">2秒</option>
+    <option value="3">3秒</option>
+    <option value="4">4秒</option>
+    <option value="5" selected>5秒</option>
+    <option value="6">6秒</option>
+    <option value="7">7秒</option>
+    <option value="8">8秒</option>
+    <option value="9">9秒</option>
+    <option value="10">10秒</option>
+  </select>
 
-<button onclick="startGame()">ゲーム開始</button>
-
-<div id="game" class="hidden">
   <div id="status">
-    No.<span id="number"></span><br>
-    ⏱ <span id="timer">∞</span><br>
-    正解数：<span id="score">0</span><br>
-    最高記録：<span id="best">0</span>
+    この時間の最高記録：<span id="best">0</span>
   </div>
 
-  <input id="answer" list="pokemonList" placeholder="ポケモン名を入力">
-  <datalist id="pokemonList"></datalist>
-</div>
+  <button onclick="startGame()">ゲーム開始</button>
+
+  <div id="game" class="hidden">
+    <div id="status">
+      No.<span id="number"></span><br>
+      ⏱ <span id="timer"></span><br>
+      正解数：<span id="score">0</span>
+    </div>
+
+    <input
+      id="answer"
+      list="pokemonList"
+      placeholder="ポケモン名を入力"
+      autocomplete="off"
+    >
+    <datalist id="pokemonList"></datalist>
+  </div>
 </div>
 
 <script>
-/* ===== 変数 ===== */
 let pokemon = {};
 let numbers = [];
 let currentNumber = null;
@@ -76,29 +102,18 @@ let timeLeft = 0;
 let limit = 5;
 let score = 0;
 
-/* ===== DOM ===== */
-const answer = document.getElementById("answer");
-const pokemonList = document.getElementById("pokemonList");
-const numberSpan = document.getElementById("number");
-const timerSpan = document.getElementById("timer");
-const scoreSpan = document.getElementById("score");
-const bestSpan = document.getElementById("best");
-const game = document.getElementById("game");
-const timeSelect = document.getElementById("timeSelect");
-
-/* ===== ひらがな→カタカナ ===== */
-function hiraToKata(str) {
-  return str.replace(/[\u3041-\u3096]/g, ch =>
-    String.fromCharCode(ch.charCodeAt(0) + 0x60)
-  );
+/* ===== 日本語正規化（完全対応） ===== */
+function normalizeJP(str) {
+  return str
+    .normalize("NFKC")
+    .replace(/[\u3041-\u3096]/g, ch =>
+      String.fromCharCode(ch.charCodeAt(0) + 0x60)
+    );
 }
 
-/* ===== 最高記録 ===== */
-function getBest(limit) {
-  return Number(localStorage.getItem(`pokemon_best_${limit}`)) || 0;
-}
-function saveBest(limit, score) {
-  localStorage.setItem(`pokemon_best_${limit}`, score);
+/* ===== 最高記録キー ===== */
+function bestKey() {
+  return `pokemon_best_${limit}`;
 }
 
 /* ===== JSON読み込み ===== */
@@ -107,22 +122,27 @@ fetch("pokemon.json")
   .then(data => {
     pokemon = data;
     numbers = Object.keys(pokemon);
-    bestSpan.textContent = getBest(Number(timeSelect.value));
+    updateBest();
   })
   .catch(() => alert("pokemon.json の読み込みに失敗しました"));
 
-/* ===== 制限時間変更時に最高記録更新 ===== */
-timeSelect.addEventListener("change", () => {
-  bestSpan.textContent = getBest(Number(timeSelect.value));
+/* ===== 最高記録表示 ===== */
+function updateBest() {
+  const best = localStorage.getItem(bestKey()) || 0;
+  document.getElementById("best").textContent = best;
+}
+
+document.getElementById("timeSelect").addEventListener("change", () => {
+  limit = Number(timeSelect.value);
+  updateBest();
 });
 
 /* ===== ゲーム開始 ===== */
 function startGame() {
   score = 0;
   limit = Number(timeSelect.value);
-  scoreSpan.textContent = score;
-  bestSpan.textContent = getBest(limit);
-  game.classList.remove("hidden");
+  document.getElementById("score").textContent = score;
+  document.getElementById("game").classList.remove("hidden");
   nextQuestion();
 }
 
@@ -130,35 +150,39 @@ function startGame() {
 function nextQuestion() {
   clearInterval(timer);
 
-  currentNumber = numbers[Math.floor(Math.random() * numbers.length)];
-  numberSpan.textContent = currentNumber;
-
   if (limit === 0) {
-    timerSpan.textContent = "∞";
+    document.getElementById("timer").textContent = "∞";
   } else {
     timeLeft = limit;
-    timerSpan.textContent = timeLeft;
+    document.getElementById("timer").textContent = timeLeft;
+
     timer = setInterval(() => {
       timeLeft--;
-      timerSpan.textContent = timeLeft;
-      if (timeLeft <= 0) {
-        gameOver(`時間切れ！\n正解は「${pokemon[currentNumber]}」`);
-      }
+      document.getElementById("timer").textContent = timeLeft;
+      if (timeLeft <= 0) gameOver("時間切れ！");
     }, 1000);
   }
+
+  currentNumber = numbers[Math.floor(Math.random() * numbers.length)];
+  document.getElementById("number").textContent = currentNumber;
 
   answer.value = "";
   answer.focus();
 }
 
-/* ===== 入力：カタカナ変換＋予測 ===== */
+/* ===== Enter判定 ===== */
+answer.addEventListener("keydown", e => {
+  if (e.key === "Enter") checkAnswer();
+});
+
+/* ===== 予測変換 ===== */
 answer.addEventListener("input", () => {
-  answer.value = hiraToKata(answer.value);
+  const text = normalizeJP(answer.value);
   pokemonList.innerHTML = "";
-  if (!answer.value) return;
+  if (!text) return;
 
   numbers.forEach(n => {
-    if (pokemon[n].startsWith(answer.value)) {
+    if (normalizeJP(pokemon[n]).startsWith(text)) {
       const o = document.createElement("option");
       o.value = pokemon[n];
       pokemonList.appendChild(o);
@@ -166,16 +190,14 @@ answer.addEventListener("input", () => {
   });
 });
 
-/* ===== Enter判定 ===== */
-answer.addEventListener("keydown", e => {
-  if (e.key === "Enter") checkAnswer();
-});
-
 /* ===== 判定 ===== */
 function checkAnswer() {
-  if (answer.value === pokemon[currentNumber]) {
+  const input = normalizeJP(answer.value.trim());
+  const correct = normalizeJP(pokemon[currentNumber]);
+
+  if (input === correct) {
     score++;
-    scoreSpan.textContent = score;
+    document.getElementById("score").textContent = score;
     nextQuestion();
   } else {
     gameOver(`不正解！\n正解は「${pokemon[currentNumber]}」`);
@@ -183,15 +205,16 @@ function checkAnswer() {
 }
 
 /* ===== ゲームオーバー ===== */
-function gameOver(msg) {
+function gameOver(reason) {
   clearInterval(timer);
 
-  const best = getBest(limit);
-  if (score > best) saveBest(limit, score);
+  const key = bestKey();
+  const best = Math.max(score, Number(localStorage.getItem(key) || 0));
+  localStorage.setItem(key, best);
 
-  alert(`${msg}\nスコア：${score}\n最高記録：${getBest(limit)}`);
-  bestSpan.textContent = getBest(limit);
-  game.classList.add("hidden");
+  alert(`${reason}\nスコア：${score}\n最高記録：${best}`);
+  updateBest();
+  document.getElementById("game").classList.add("hidden");
 }
 </script>
 </body>
