--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ポケモン図鑑番号検定</title>
+<title>ポケモンタイムアタック</title>
 
 <style>
 body {
@@ -53,9 +53,9 @@ select, input, button {
 
 <body>
 <div class="container">
-  <h1>ポケモン図鑑番号検定</h1>
+  <h1>ポケモンタイムアタック</h1>
 
-  <label>制限時間を選択</label>
+  <label>制限時間</label>
   <select id="timeSelect">
     <option value="0">制限時間なし</option>
     <option value="1">1秒</option>
@@ -70,8 +70,8 @@ select, input, button {
     <option value="10">10秒</option>
   </select>
 
-  <div id="status">
-    この時間の最高記録：<span id="best">0</span>
+  <div id="bestBox">
+    最高記録：<span id="best">0</span>
   </div>
 
   <button onclick="startGame()">ゲーム開始</button>
@@ -94,6 +94,9 @@ select, input, button {
 </div>
 
 <script>
+/* =========================
+   共通データ
+========================= */
 let pokemon = {};
 let numbers = [];
 let currentNumber = null;
@@ -102,21 +105,29 @@ let timeLeft = 0;
 let limit = 5;
 let score = 0;
 
-/* ===== 日本語正規化（完全対応） ===== */
+/* =========================
+   日本語正規化（完全対応）
+   ・ひらがな→カタカナ
+   ・全角→半角
+   ・濁音・半濁音・ッ対応
+========================= */
 function normalizeJP(str) {
+  if (!str) return "";
+
   return str
-    .normalize("NFKC")
+    // ひらがな → カタカナ
     .replace(/[\u3041-\u3096]/g, ch =>
       String.fromCharCode(ch.charCodeAt(0) + 0x60)
-    );
+    )
+    // 全角カタカナ → 半角
+    .normalize("NFKC")
+    // 大文字小文字の差を消す（念のため）
+    .toUpperCase();
 }
 
-/* ===== 最高記録キー ===== */
-function bestKey() {
-  return `pokemon_best_${limit}`;
-}
-
-/* ===== JSON読み込み ===== */
+/* =========================
+   JSON読み込み
+========================= */
 fetch("pokemon.json")
   .then(r => r.json())
   .then(data => {
@@ -126,7 +137,13 @@ fetch("pokemon.json")
   })
   .catch(() => alert("pokemon.json の読み込みに失敗しました"));
 
-/* ===== 最高記録表示 ===== */
+/* =========================
+   時間別最高記録
+========================= */
+function bestKey() {
+  return "pokemon_best_" + limit;
+}
+
 function updateBest() {
   const best = localStorage.getItem(bestKey()) || 0;
   document.getElementById("best").textContent = best;
@@ -137,25 +154,29 @@ document.getElementById("timeSelect").addEventListener("change", () => {
   updateBest();
 });
 
-/* ===== ゲーム開始 ===== */
+/* =========================
+   ゲーム開始
+========================= */
 function startGame() {
   score = 0;
   limit = Number(timeSelect.value);
   document.getElementById("score").textContent = score;
   document.getElementById("game").classList.remove("hidden");
+  updateBest();
   nextQuestion();
 }
 
-/* ===== 次の問題 ===== */
+/* =========================
+   次の問題
+========================= */
 function nextQuestion() {
   clearInterval(timer);
 
   if (limit === 0) {
-    document.getElementById("timer").textContent = "∞";
+    timer.textContent = "∞";
   } else {
     timeLeft = limit;
-    document.getElementById("timer").textContent = timeLeft;
-
+    timer.textContent = timeLeft;
     timer = setInterval(() => {
       timeLeft--;
       document.getElementById("timer").textContent = timeLeft;
@@ -170,19 +191,20 @@ function nextQuestion() {
   answer.focus();
 }
 
-/* ===== Enter判定 ===== */
-answer.addEventListener("keydown", e => {
-  if (e.key === "Enter") checkAnswer();
-});
-
-/* ===== 予測変換 ===== */
+/* =========================
+   予測変換（完全対応）
+========================= */
 answer.addEventListener("input", () => {
-  const text = normalizeJP(answer.value);
+  const text = answer.value;
   pokemonList.innerHTML = "";
+
   if (!text) return;
 
   numbers.forEach(n => {
-    if (normalizeJP(pokemon[n]).startsWith(text)) {
+    if (
+      normalizeJP(pokemon[n])
+        .startsWith(normalizeJP(text))
+    ) {
       const o = document.createElement("option");
       o.value = pokemon[n];
       pokemonList.appendChild(o);
@@ -190,29 +212,53 @@ answer.addEventListener("input", () => {
   });
 });
 
-/* ===== 判定 ===== */
-function checkAnswer() {
-  const input = normalizeJP(answer.value.trim());
-  const correct = normalizeJP(pokemon[currentNumber]);
+/* =========================
+   Enterキー判定
+========================= */
+answer.addEventListener("keydown", e => {
+  if (e.key === "Enter") {
+    e.preventDefault();
+    checkAnswer();
+  }
+});
 
-  if (input === correct) {
+/* =========================
+   判定
+========================= */
+function checkAnswer() {
+  const input = answer.value.trim();
+
+  if (
+    normalizeJP(input) ===
+    normalizeJP(pokemon[currentNumber])
+  ) {
     score++;
     document.getElementById("score").textContent = score;
     nextQuestion();
   } else {
-    gameOver(`不正解！\n正解は「${pokemon[currentNumber]}」`);
+    gameOver(
+      "不正解！\n正解：" + pokemon[currentNumber]
+    );
   }
 }
 
-/* ===== ゲームオーバー ===== */
+/* =========================
+   ゲームオーバー
+========================= */
 function gameOver(reason) {
   clearInterval(timer);
 
   const key = bestKey();
-  const best = Math.max(score, Number(localStorage.getItem(key) || 0));
-  localStorage.setItem(key, best);
+  const best = Number(localStorage.getItem(key) || 0);
 
-  alert(`${reason}\nスコア：${score}\n最高記録：${best}`);
+  if (score > best) {
+    localStorage.setItem(key, score);
+  }
+
+  alert(
+    `${reason}\nスコア：${score}\n最高記録：${Math.max(score, best)}`
+  );
+
   updateBest();
   document.getElementById("game").classList.add("hidden");
 }
