--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ select, input, button {
     <option value="10">10秒</option>
   </select>
 
-  <div id="bestBox">
-    最高記録：<span id="best">0</span>
+  <div id="status">
+    この時間の最高記録：<span id="best">0</span>
   </div>
 
   <button onclick="startGame()">ゲーム開始</button>
@@ -94,9 +94,6 @@ select, input, button {
 </div>
 
 <script>
-/* =========================
-   共通データ
-========================= */
 let pokemon = {};
 let numbers = [];
 let currentNumber = null;
@@ -105,29 +102,21 @@ let timeLeft = 0;
 let limit = 5;
 let score = 0;
 
-/* =========================
-   日本語正規化（完全対応）
-   ・ひらがな→カタカナ
-   ・全角→半角
-   ・濁音・半濁音・ッ対応
-========================= */
+/* ===== 日本語正規化（完全対応） ===== */
 function normalizeJP(str) {
-  if (!str) return "";
-
   return str
-    // ひらがな → カタカナ
+    .normalize("NFKC")
     .replace(/[\u3041-\u3096]/g, ch =>
       String.fromCharCode(ch.charCodeAt(0) + 0x60)
-    )
-    // 全角カタカナ → 半角
-    .normalize("NFKC")
-    // 大文字小文字の差を消す（念のため）
-    .toUpperCase();
+    );
 }
 
-/* =========================
-   JSON読み込み
-========================= */
+/* ===== 最高記録キー ===== */
+function bestKey() {
+  return `pokemon_best_${limit}`;
+}
+
+/* ===== JSON読み込み ===== */
 fetch("pokemon.json")
   .then(r => r.json())
   .then(data => {
@@ -137,13 +126,7 @@ fetch("pokemon.json")
   })
   .catch(() => alert("pokemon.json の読み込みに失敗しました"));
 
-/* =========================
-   時間別最高記録
-========================= */
-function bestKey() {
-  return "pokemon_best_" + limit;
-}
-
+/* ===== 最高記録表示 ===== */
 function updateBest() {
   const best = localStorage.getItem(bestKey()) || 0;
   document.getElementById("best").textContent = best;
@@ -154,29 +137,25 @@ document.getElementById("timeSelect").addEventListener("change", () => {
   updateBest();
 });
 
-/* =========================
-   ゲーム開始
-========================= */
+/* ===== ゲーム開始 ===== */
 function startGame() {
   score = 0;
   limit = Number(timeSelect.value);
   document.getElementById("score").textContent = score;
   document.getElementById("game").classList.remove("hidden");
-  updateBest();
   nextQuestion();
 }
 
-/* =========================
-   次の問題
-========================= */
+/* ===== 次の問題 ===== */
 function nextQuestion() {
   clearInterval(timer);
 
   if (limit === 0) {
-    timer.textContent = "∞";
+    document.getElementById("timer").textContent = "∞";
   } else {
     timeLeft = limit;
-    timer.textContent = timeLeft;
+    document.getElementById("timer").textContent = timeLeft;
+
     timer = setInterval(() => {
       timeLeft--;
       document.getElementById("timer").textContent = timeLeft;
@@ -191,74 +170,49 @@ function nextQuestion() {
   answer.focus();
 }
 
-/* =========================
-   予測変換（完全対応）
-========================= */
-answer.addEventListener("input", () => {
-  const text = answer.value;
-  pokemonList.innerHTML = "";
+/* ===== Enter判定 ===== */
+answer.addEventListener("keydown", e => {
+  if (e.key === "Enter") checkAnswer();
+});
 
-  if (!text) return;
+/* ===== 予測変換 ===== */
+answer.addEventListener("input", () => {
+  const text = normalizeJP(answer.value);
+  const list = pokemonList;
+  list.innerHTML = "";
 
   numbers.forEach(n => {
-    if (
-      normalizeJP(pokemon[n])
-        .startsWith(normalizeJP(text))
-    ) {
+    if (normalizeJP(pokemon[n]).startsWith(normalizeJP(text))) {
       const o = document.createElement("option");
       o.value = pokemon[n];
-      pokemonList.appendChild(o);
+      list.appendChild(o);
     }
   });
 });
 
-/* =========================
-   Enterキー判定
-========================= */
-answer.addEventListener("keydown", e => {
-  if (e.key === "Enter") {
-    e.preventDefault();
-    checkAnswer();
-  }
-});
-
-/* =========================
-   判定
-========================= */
+/* ===== 判定 ===== */
 function checkAnswer() {
-  const input = answer.value.trim();
+  const input = normalizeJP(answer.value.trim());
+  const correct = normalizeJP(pokemon[currentNumber]);
 
-  if (
-    normalizeJP(input) ===
-    normalizeJP(pokemon[currentNumber])
-  ) {
+  if (input === correct) {
     score++;
     document.getElementById("score").textContent = score;
     nextQuestion();
   } else {
-    gameOver(
-      "不正解！\n正解：" + pokemon[currentNumber]
-    );
+    gameOver(`不正解！\n正解は「${pokemon[currentNumber]}」`);
   }
 }
 
-/* =========================
-   ゲームオーバー
-========================= */
+/* ===== ゲームオーバー ===== */
 function gameOver(reason) {
   clearInterval(timer);
 
   const key = bestKey();
-  const best = Number(localStorage.getItem(key) || 0);
+  const best = Math.max(score, Number(localStorage.getItem(key) || 0));
+  localStorage.setItem(key, best);
 
-  if (score > best) {
-    localStorage.setItem(key, score);
-  }
-
-  alert(
-    `${reason}\nスコア：${score}\n最高記録：${Math.max(score, best)}`
-  );
-
+  alert(`${reason}\nスコア：${score}\n最高記録：${best}`);
   updateBest();
   document.getElementById("game").classList.add("hidden");
 }
