--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ポケモンタイムアタック</title>
+<title>ポケモン図鑑番号検定</title>
 
 <style>
 body {
@@ -53,7 +53,7 @@ select, input, button {
 
 <body>
 <div class="container">
-  <h1>ポケモンタイムアタック</h1>
+  <h1>ポケモン図鑑番号検定</h1>
 
   <label>制限時間</label>
   <select id="timeSelect">
@@ -219,3 +219,4 @@ function gameOver(reason) {
 </script>
 </body>
 </html>
+
