--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@ body {
   padding: 10px;
   background: #f5f5f5;
 }
-
 .container {
   max-width: 500px;
   margin: auto;
@@ -21,33 +20,11 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
-
-h1 {
-  text-align: center;
-  font-size: 1.4em;
-}
-
-select, input, button {
-  width: 100%;
-  font-size: 1.1em;
-  padding: 10px;
-  margin: 8px 0;
-}
-
-#status {
-  text-align: center;
-  font-size: 1.1em;
-  margin: 10px 0;
-}
-
-#timer {
-  font-weight: bold;
-  color: red;
-}
-
-.hidden {
-  display: none;
-}
+h1 { text-align: center; font-size: 1.4em; }
+select, input, button { width: 100%; font-size: 1.1em; padding: 10px; margin: 8px 0; }
+#status { text-align: center; font-size: 1.1em; margin: 10px 0; }
+#timer { font-weight: bold; color: red; }
+.hidden { display: none; }
 </style>
 </head>
 
@@ -58,12 +35,12 @@ select, input, button {
   <label>制限時間</label>
   <select id="timeSelect">
     <option value="0">制限時間なし</option>
-    <option value="5" selected>5秒</option>
-    <option value="10" selected>10秒</option>
-    <option value="20" selected>20秒</option>
-    <option value="30" selected>30秒</option>
-    <option value="45" selected>45秒</option>
-    <option value="60" selected>60秒</option>
+    <option value="5">5秒</option>
+    <option value="10">10秒</option>
+    <option value="20">20秒</option>
+    <option value="30">30秒</option>
+    <option value="45">45秒</option>
+    <option value="60">60秒</option>
   </select>
 
   <div id="status">
@@ -98,21 +75,25 @@ let timeLeft = 0;
 let limit = 10;
 let score = 0;
 
-/* ===== 日本語正規化（完全対応） ===== */
+// HTML要素参照を先に取得
+const answer = document.getElementById("answer");
+const pokemonList = document.getElementById("pokemonList");
+const timeSelect = document.getElementById("timeSelect");
+
+// ----- ひらがな・濁音・拗音対応の正規化 -----
 function normalizeJP(str) {
   return str
     .normalize("NFKC")
     .replace(/[\u3041-\u3096]/g, ch =>
       String.fromCharCode(ch.charCodeAt(0) + 0x60)
-    );
+    )
+    .replace(/ゔ/g, "ヴ"); // ヴも対応
 }
 
-/* ===== 最高記録キー ===== */
-function bestKey() {
-  return `pokemon_best_${limit}`;
-}
+// ----- 最高記録のキー -----
+function bestKey() { return `pokemon_best_${limit}`; }
 
-/* ===== JSON読み込み ===== */
+// ----- JSON読み込み -----
 fetch("pokemon.json")
   .then(r => r.json())
   .then(data => {
@@ -122,18 +103,18 @@ fetch("pokemon.json")
   })
   .catch(() => alert("pokemon.json の読み込みに失敗しました"));
 
-/* ===== 最高記録表示 ===== */
+// ----- 最高記録表示 -----
 function updateBest() {
   const best = localStorage.getItem(bestKey()) || 0;
   document.getElementById("best").textContent = best;
 }
 
-document.getElementById("timeSelect").addEventListener("change", () => {
+timeSelect.addEventListener("change", () => {
   limit = Number(timeSelect.value);
   updateBest();
 });
 
-/* ===== ゲーム開始 ===== */
+// ----- ゲーム開始 -----
 function startGame() {
   score = 0;
   limit = Number(timeSelect.value);
@@ -142,7 +123,7 @@ function startGame() {
   nextQuestion();
 }
 
-/* ===== 次の問題 ===== */
+// ----- 次の問題 -----
 function nextQuestion() {
   clearInterval(timer);
 
@@ -156,9 +137,10 @@ function nextQuestion() {
       timeLeft--;
       document.getElementById("timer").textContent = timeLeft;
       if (timeLeft <= 0) {
-        gameOver('時間切れ！\n正解は「${pokemon[currentNumber]}」');
-    }
-  }, 1000);
+        gameOver(`時間切れ！\n正解は「${pokemon[currentNumber]}」`);
+      }
+    }, 1000);
+  }
 
   currentNumber = numbers[Math.floor(Math.random() * numbers.length)];
   document.getElementById("number").textContent = currentNumber;
@@ -167,32 +149,31 @@ function nextQuestion() {
   answer.focus();
 }
 
-/* ===== Enter判定 ===== */
+// ----- Enter判定 -----
 answer.addEventListener("keydown", e => {
   if (e.key === "Enter") checkAnswer();
 });
 
-/* ===== 予測変換 ===== */
+// ----- 予測変換 -----
 answer.addEventListener("input", () => {
   const text = normalizeJP(answer.value);
-  const list = pokemonList;
-  list.innerHTML = "";
+  pokemonList.innerHTML = "";
 
   numbers.forEach(n => {
-    if (normalizeJP(pokemon[n]).startsWith(normalizeJP(text))) {
+    if (normalizeJP(pokemon[n]).startsWith(text)) {
       const o = document.createElement("option");
       o.value = pokemon[n];
-      list.appendChild(o);
+      pokemonList.appendChild(o);
     }
   });
 });
 
-/* ===== 判定 ===== */
+// ----- 判定 -----
 function checkAnswer() {
-  const input = normalizeJP(answer.value.trim());
+  const inputText = normalizeJP(answer.value.trim());
   const correct = normalizeJP(pokemon[currentNumber]);
 
-  if (input === correct) {
+  if (inputText === correct) {
     score++;
     document.getElementById("score").textContent = score;
     nextQuestion();
@@ -201,7 +182,7 @@ function checkAnswer() {
   }
 }
 
-/* ===== ゲームオーバー ===== */
+// ----- ゲームオーバー -----
 function gameOver(reason) {
   clearInterval(timer);
 
@@ -216,5 +197,3 @@ function gameOver(reason) {
 </script>
 </body>
 </html>
-
-
