--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 <style>
 body { font-family: system-ui, sans-serif; margin:0; padding:10px; background:#f5f5f5;}
 .container { max-width:600px; margin:auto; background:white; padding:15px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1);}
-h1 { text-align:center; font-size:1.4em;}
+h1 { text-align:center; font-size:1.4em; margin-bottom:10px; }
 select, input, button { width:100%; font-size:1.1em; padding:10px; margin:5px 0;}
 #status { text-align:center; font-size:1.1em; margin:10px 0;}
 #timer { font-weight:bold; color:red;}
 .hidden { display:none;}
-.gen-container { display:grid; grid-template-columns: 1fr 1fr; gap:5px; margin:5px 0;}
+.gen-container { display:grid; grid-template-columns: repeat(2, 1fr); gap:5px; margin:10px 0;}
+.gen-box { border:1px solid #ccc; border-radius:5px; padding:5px; text-align:center; position:relative; height:50px; display:flex; flex-direction:column; justify-content:center; }
+.gen-box input { position:absolute; bottom:5px; right:5px; }
 button { cursor:pointer; }
 </style>
 </head>
@@ -33,16 +35,16 @@ button { cursor:pointer; }
 
 <label>出題世代</label>
 <div class="gen-container">
-  <label><input type="checkbox" class="generation" value="all" checked> 全て</label>
-  <label><input type="checkbox" class="generation" value="1"> カントー</label>
-  <label><input type="checkbox" class="generation" value="2"> ジョウト</label>
-  <label><input type="checkbox" class="generation" value="3"> ホウエン</label>
-  <label><input type="checkbox" class="generation" value="4"> シンオウ</label>
-  <label><input type="checkbox" class="generation" value="5"> イッシュ</label>
-  <label><input type="checkbox" class="generation" value="6"> カロス</label>
-  <label><input type="checkbox" class="generation" value="7"> アローラ+メルタン</label>
-  <label><input type="checkbox" class="generation" value="8"> ガラル+ヒスイ</label>
-  <label><input type="checkbox" class="generation" value="9"> パルデア</label>
+  <div class="gen-box"><span>全て</span><input type="checkbox" class="generation" value="all" checked></div>
+  <div class="gen-box"><span>カントー</span><input type="checkbox" class="generation" value="1" checked></div>
+  <div class="gen-box"><span>ジョウト</span><input type="checkbox" class="generation" value="2" checked></div>
+  <div class="gen-box"><span>ホウエン</span><input type="checkbox" class="generation" value="3" checked></div>
+  <div class="gen-box"><span>シンオウ</span><input type="checkbox" class="generation" value="4" checked></div>
+  <div class="gen-box"><span>イッシュ</span><input type="checkbox" class="generation" value="5" checked></div>
+  <div class="gen-box"><span>カロス</span><input type="checkbox" class="generation" value="6" checked></div>
+  <div class="gen-box"><span>アローラ+メルタン</span><input type="checkbox" class="generation" value="7" checked></div>
+  <div class="gen-box"><span>ガラル+ヒスイ</span><input type="checkbox" class="generation" value="8" checked></div>
+  <div class="gen-box"><span>パルデア</span><input type="checkbox" class="generation" value="9" checked></div>
 </div>
 
 <div id="rankingDiv">この時間の最高記録（1～3位）：<br>---</div>
@@ -73,45 +75,43 @@ let timeLeft = 0;
 let limit = 10;
 let score = 0;
 
-// HTML要素参照
 const answer = document.getElementById("answer");
 const pokemonList = document.getElementById("pokemonList");
 const timeSelect = document.getElementById("timeSelect");
 const rankingDiv = document.getElementById("rankingDiv");
 const genCheckboxes = Array.from(document.querySelectorAll(".generation"));
+const allCheckbox = genCheckboxes.find(cb=>cb.value==="all");
 
-// ----- 日本語正規化（ひらがな・濁音・半濁音・拗音対応） -----
+// 日本語正規化
 function normalizeJP(str){
   return str.normalize("NFKC")
     .replace(/[\u3041-\u3096]/g,ch=>String.fromCharCode(ch.charCodeAt(0)+0x60))
     .replace(/ゔ/g,"ヴ");
 }
 
-// ----- 世代範囲 -----
+// 世代範囲
 const genRanges = {
   "1":[1,151],"2":[152,251],"3":[252,386],"4":[387,493],
   "5":[494,649],"6":[650,721],"7":[722,809],"8":[810,906],"9":[907,1025]
 };
 
 function getSelectedNumbers(){
-  let selected = genCheckboxes.filter(cb=>cb.checked && cb.value!=="all").map(cb=>cb.value);
-  if(genCheckboxes[0].checked || selected.length===0){ // 全選択
+  const selected = genCheckboxes.filter(cb=>cb.checked && cb.value!=="all").map(cb=>cb.value);
+  if(selected.length===0 || selected.includes("all")){
     return Object.keys(pokemon);
   }
-  let arr = [];
+  let nums=[];
   selected.forEach(g=>{
-    let [s,e] = genRanges[g];
-    for(let i=s;i<=e;i++) arr.push(String(i));
+    const [start,end]=genRanges[g];
+    for(let i=start;i<=end;i++) nums.push(String(i));
   });
-  return arr;
+  return nums;
 }
 
-// ----- 最高記録キー -----
-function bestKey(){
-  return `pokemon_best_${limit}`;
-}
+// 最高記録キー
+function bestKey(){ return `pokemon_best_${limit}`; }
 
-// ----- JSON読み込み -----
+// JSON読み込み
 fetch("pokemon.json")
 .then(r=>r.json())
 .then(data=>{
@@ -121,32 +121,38 @@ fetch("pokemon.json")
 })
 .catch(()=>alert("pokemon.json の読み込みに失敗しました"));
 
-// ----- 最高記録更新表示 -----
+// 最高記録表示更新
 function updateBest(){
-  const allSelected = genCheckboxes[0].checked || genCheckboxes.slice(1).every(cb=>cb.checked);
-  if(!allSelected){
-    rankingDiv.style.display = "none";
-    return;
+  const selected = genCheckboxes.filter(cb=>cb.checked && cb.value!=="all");
+  if(selected.length===genCheckboxes.length-1){
+    rankingDiv.style.display="block";
+    let top = JSON.parse(localStorage.getItem(bestKey())||"[]");
+    rankingDiv.innerHTML = top.length? top.map((v,i)=>`${i+1}位: ${v}`).join("<br>") : "この時間の最高記録（1～3位）：<br>---";
+  } else {
+    rankingDiv.style.display="none";
   }
-  rankingDiv.style.display = "block";
-  const top = JSON.parse(localStorage.getItem(bestKey())||"[]");
-  rankingDiv.innerHTML = top.length ? top.map((v,i)=>`${i+1}位: ${v}`).join("<br>") : "この時間の最高記録（1～3位）：<br>---";
 }
 
-// ----- チェックボックス操作 -----
-genCheckboxes.forEach(cb=>{
+// ----- 全てチェック制御 -----
+allCheckbox.addEventListener("change",()=>{
+  if(allCheckbox.checked){
+    genCheckboxes.forEach(cb=>cb.checked=true);
+  }else{
+    genCheckboxes.filter(cb=>cb.value!=="all").forEach(cb=>cb.checked=false);
+  }
+  updateBest();
+});
+
+// 個別チェック変更時に全てチェック更新
+genCheckboxes.filter(cb=>cb.value!=="all").forEach(cb=>{
   cb.addEventListener("change",()=>{
-    if(cb.value==="all"){
-      genCheckboxes.forEach(c=>c.checked=cb.checked);
-    }else{
-      const all = genCheckboxes.slice(1).every(c=>c.checked);
-      genCheckboxes[0].checked=all;
-    }
+    const allSelected = genCheckboxes.filter(c=>c.value!=="all").every(c=>c.checked);
+    allCheckbox.checked = allSelected;
     updateBest();
   });
 });
 
-// ----- ゲーム開始 -----
+// ゲーム開始
 function startGame(){
   score = 0;
   limit = Number(timeSelect.value);
@@ -155,13 +161,12 @@ function startGame(){
   nextQuestion();
 }
 
-// ----- 次の問題 -----
+// 次の問題
 function nextQuestion(){
   clearInterval(timer);
-
   if(limit===0){
     document.getElementById("timer").textContent="∞";
-  }else{
+  } else {
     timeLeft=limit;
     document.getElementById("timer").textContent=timeLeft;
     timer=setInterval(()=>{
@@ -173,31 +178,31 @@ function nextQuestion(){
 
   const available = getSelectedNumbers();
   currentNumber = available[Math.floor(Math.random()*available.length)];
-  document.getElementById("number").textContent = currentNumber;
+  document.getElementById("number").textContent=currentNumber;
 
   answer.value="";
   answer.focus();
 }
 
-// ----- Enter判定 -----
+// Enter判定
 answer.addEventListener("keydown",e=>{
   if(e.key==="Enter") checkAnswer();
 });
 
-// ----- 予測変換 -----
+// 予測変換
 answer.addEventListener("input",()=>{
   const text = normalizeJP(answer.value);
   pokemonList.innerHTML="";
   numbers.forEach(n=>{
     if(normalizeJP(pokemon[n]).startsWith(text) || n.startsWith(text)){
-      const o = document.createElement("option");
-      o.value = pokemon[n];
+      const o=document.createElement("option");
+      o.value=pokemon[n];
       pokemonList.appendChild(o);
     }
   });
 });
 
-// ----- 判定 -----
+// 判定
 function checkAnswer(){
   const inputText = normalizeJP(answer.value.trim());
   const correct = normalizeJP(pokemon[currentNumber]);
@@ -210,16 +215,16 @@ function checkAnswer(){
   }
 }
 
-// ----- ギブアップ -----
+// ギブアップ
 function giveUp(){
   gameOver(`ギブアップ！\n正解は「${pokemon[currentNumber]}」`);
 }
 
-// ----- ゲームオーバー -----
+// ゲームオーバー
 function gameOver(reason){
   clearInterval(timer);
-  const allSelected = genCheckboxes[0].checked || genCheckboxes.slice(1).every(cb=>cb.checked);
-  if(allSelected){
+  const selected = genCheckboxes.filter(cb=>cb.checked && cb.value!=="all");
+  if(selected.length===genCheckboxes.length-1){
     const key = bestKey();
     let top = JSON.parse(localStorage.getItem(key)||"[]");
     top.push(score);
